# market-viewer

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  build.sh  docker-compose.yml
src/: chart_generator.py  main.py  processor.py  stochastic_processing.py
src/analysis/: __init__.py  indicators.py  price.py  trend.py  volume.py
tests/: test_analysis.py  test_chart_generator.py  test_indicators.py  test_stochastic_processing.py  test_trend.py  test_volume_analysis.py
