[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "market-viewer"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "Market Viewer - Comprehensive Market Analysis Tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
package_dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/my-oh-my/market-viewer"
"Bug Tracker" = "https://github.com/my-oh-my/market-viewer/issues"
